# card-game

./: .gitignore  CMakeLists.txt  Card.cpp  Login.qml  MButton.qml  MTextBox.qml  Main.qml  MainMenu.qml  README.md  card.h  git log  handevaluator.cpp  handevaluator.h  handlecard.cpp  handlecard.h  main.cpp
client-src/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.54fde80  Card.cpp  Card.h  Card.qml  CardPanel.qml  ChatPanel.qml  History.qml  Login.qml  MButton.qml  MTextBox.qml  Main.qml  MainMenu.qml  Match.h  Player.h  Playground.qml  Round.h  ServerHandler.cpp  ServerHandler.h  ServerSetup.qml  main.cpp  qml.qrc  resources.qrc
server-src/logic-game/: card.cpp  f  handlecard.cpp
server-src/server-game/: CMakeLists.txt  card.cpp  card.h  chathandler.cpp  chathandler.h  game.cpp  game.h  gamehistory.cpp  gamehistory.h  handevaluator.cpp  handevaluator.h  main.cpp  player.cpp  player.h  server.cpp  server.h  sharedDefs.h  useraccount.cpp  useraccount.h
